# wasm-chat

./: README.md
chat-frontend/: Cargo.toml  package-lock.json  package.json
chat-frontend/src/: lib.rs
chat-frontend/static/: index.html
chat-server/: Cargo.toml  plugin.wasm
chat-server/src/: main.rs
hello-world/: Makefile  README.md  index.html  index.js
hello-world/src/: lib.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
